--- a/index0.html
+++ b/index0.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ПДВ</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
 </head>
 
 <body>
     <div class="wrapper">
         <header>
-            <div class="logo"><img src="assets/images/logo.png" alt="Логотип" class="logoimg"></div>
+            <div class="logo"><img src="logo.png" alt="Логотип" class="logoimg"></div>
             <div class="title">Податок на прибуток</div>
         </header>
         <nav>
@@ -37,7 +37,7 @@
                     <li>ввезення товарів на митну територію України;</li>
                     <li>З метою оподаткування цим податком до операцій з ввезення товарів на митну територію України прирівнюється поміщення товарів у будь-який митний режим, визначений Митним кодексом України.</li>
                 </ol>
-                <p><div class="calculator"><img src="assets/images/calculator.jpg" alt="ПДВ" class="calculator"></div></p>
+                <p><div class="calculator"><img src="calculator.jpg" alt="ПДВ" class="calculator"></div></p>
             </aside>
             <article class="right">
                 <h2>Якщо щось з лівого переліку відповідає вашому запиту, то введіть наступні дані:</h2>
@@ -69,8 +69,6 @@
                 </script>
             </article>
         </main>
-
     </div>
 </body>
-
 </html>
