--- a/index1.html
+++ b/index1.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ПДВ</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
 </head>
 
 <body>
     <div class="wrapper">
         <header>
-            <div class="logo"><img src="assets/images/logo.png" alt="Логотип" class="logoimg"></div>
+            <div class="logo"><img src="logo.png" alt="Логотип" class="logoimg"></div>
             <div class="title">Податок на прибуток</div>
         </header>
         <nav>
@@ -32,7 +32,7 @@
                 <h1>Податкова ставка 14%</h1>
                 <p align="justify"><p>14% ставка оподаткування застосовується щодо:</p>
                 <p>певних видів сільськогосподарської продукції: пшениця і суміш пшениці та жита (меслин), ячмінь, кукурудза, соєві боби, подрібнені або неподрібнені, насіння свиріпи або ріпаку, подрібнене або неподрібнене, насіння соняшнику, подрібнене або неподрібнене).</p>
-                <p><div class="calculator"><img src="assets/images/calculator.jpg" alt="ПДВ" class="calculator"></div></p>
+                <p><div class="calculator"><img src="calculator.jpg" alt="ПДВ" class="calculator"></div></p>
             </aside>
             <article class="right">
                 <h2>Якщо щось з лівого переліку відповідає вашому запиту, то введіть наступні дані:</h2>
@@ -64,8 +64,6 @@
                 </script>
             </article>
         </main>
-
     </div>
 </body>
-
 </html>
