--- a/index2.html
+++ b/index2.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ПДВ</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
 </head>
 
 <body>
     <div class="wrapper">
         <header>
-            <div class="logo"><img src="assets/images/logo.png" alt="Логотип" class="logoimg"></div>
+            <div class="logo"><img src="logo.png" alt="Логотип" class="logoimg"></div>
             <div class="title">Податок на прибуток</div>
         </header>
         <nav>
@@ -41,7 +41,7 @@
                         <li><i>лікарських засобів, дозволених для виробництва і застосування в Україні та внесених до Державного реєстру лікарських засобів;</i></li>
                         <li><i>медвиробів, які внесені до Державного реєстру медичної техніки та виробів медичного призначення або відповідають вимогам відповідних технічних регламентів, що підтверджується документом про відповідність, та дозволені для надання на ринку та/або введення в експлуатацію і застосування в Україні;</i></li>
                         <li><i>лікарських засобів, медичних виробів та/або медичного обладнання, дозволених для застосування в межах клінічних випробувань, дозвіл на проведення яких надано центральним органом виконавчої влади, що забезпечує формування державної політики у сфері охорони здоров’я.</i></li>
-                <p><div class="calculator"><img src="assets/images/calculator.jpg" alt="ПДВ" class="calculator"></div></p>
+                <p><div class="calculator"><img src="calculator.jpg" alt="ПДВ" class="calculator"></div></p>
             </aside>
             <article class="right">
                 <h2>Якщо щось з лівого переліку відповідає вашому запиту, то введіть наступні дані:</h2>
@@ -73,8 +73,6 @@
                 </script>
             </article>
         </main>
-
     </div>
 </body>
-
 </html>
