--- a/index5.html
+++ b/index5.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ПДВ </title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
 <style>
 
@@ -16,7 +16,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <div class="logo"><img src="assets/images/logo.png" alt="Логотип" class="logoimg"></div>
+            <div class="logo"><img src="logo.png" alt="Логотип" class="logoimg"></div>
             <div class="title"> Податок на додану вартість</div>
         </header>
         <nav>
@@ -33,7 +33,7 @@
         <main>
             <aside class="left">
                 <h1>ПДВ (Податок на додану вартість)</h1>
-                <div class="img"><img src="assets/images/pdv.png" alt="ПДВ" class="pdv"></div>
+                <div class="img"><img src="pdv.png" alt="ПДВ" class="pdv"></div>
                 <p align="justify"> Це непрямий податок, який входить в ціну товарів (робіт, послуг) та сплачується покупцем, але його облік та перерахування до державного бюджету здійснює продавець (податковий агент).</p> 
                 <p><b> Облік ПДВ та визначення сум цього податку пов’язані з такими основними поняттями:</b></p>
                 <ul>
