--- a/index6.html
+++ b/index6.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ПДВ</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
 <style>
 
@@ -16,7 +16,7 @@
 <body>
     <div class="wrapper">
         <header>
-            <div class="logo"><img src="assets/images/logo.png" alt="Логотип" class="logoimg"></div>
+            <div class="logo"><img src="logo.png" alt="Логотип" class="logoimg"></div>
             <div class="title">Податок на прибуток</div>
         </header>
         <nav>
@@ -34,7 +34,7 @@
             <aside class="left">
                 <h1>ПДВ (Податок на додану вартість)</h1>
                 <p align="justify"> ПДВ, або податок на додану вартість, розраховується на основі принципу доданої вартості в кожному етапі виробництва та реалізації товарів чи послуг. Основна ідея полягає в тому, щоб оподатковувати лише ту частину вартості товарів або послуг, яка додана протягом конкретного етапу виробництва чи обігу.</p> 
-                <p><div class="calculator"><img src="assets/images/calculator.jpg" alt="ПДВ" class="calculator"></div></p>
+                <p><div class="calculator"><img src="calculator.jpg" alt="ПДВ" class="calculator"></div></p>
             </aside>
             <article class="right">
                 <h2>Як розраховується ПДВ?</h2>
@@ -46,8 +46,6 @@
                 <p>Важливо відзначити, що підприємства, які обкладаються ПДВ, зазвичай мають право відраховувати ПДВ, який вони самі сплатили при закупі ресурсів чи послуг для свого виробництва чи надання послуг. Цей процес відомий як "відрахування ПДВ".</p>
             </article>
         </main>
-
     </div>
 </body>
-
 </html>
