--- a/index11.html
+++ b/index11.html
@@ -26,7 +26,7 @@
                     <li><a href="index2.html">7% ставка</a></li>
                     <li><a href="index1.html">14% ставка</a></li>
                     <li><a href="index0.html">20% ставка</a></li>
-                    <li><a href="index11.html">Тести за темою</a></li>
+                    <li><a href="index11.html">Тести</a></li>
             </nav>
             </header>
             <main>
