--- a/index2.html
+++ b/index2.html
@@ -25,6 +25,7 @@
                 <li><a href="index2.html">7% ставка</a></li>
                 <li><a href="index1.html">14% ставка</a></li>
                 <li><a href="index0.html">20% ставка</a></li>
+                <li><a href="index11.html">Тести</a></li>
             </ul>
         </nav>
         <main>
