--- a/index6.html
+++ b/index6.html
@@ -28,6 +28,7 @@
                 <li><a href="index2.html">7% ставка</a></li>
                 <li><a href="index1.html">14% ставка</a></li>
                 <li><a href="index0.html">20% ставка</a></li>
+                <li><a href="inde11.html">Тести</a></li>
             </ul>
         </nav>
         <main>
