--- a/index11.html
+++ b/index11.html
@@ -15,7 +15,7 @@
     <body>
         <div class="wrapper">
             <header>
-                <div class="logo"><img src="assets/images/logo.png" alt="Логотип" class="logoimg"></div>
+                <div class="logo"><img src="logo.png" alt="Логотип" class="logoimg"></div>
                 <div class="title">Податок на прибуток</div>
             <nav>
                 <ul class="list">
@@ -32,7 +32,7 @@
             <main>
                 <aside class="left">
                     <h1>Бухгалтерський облік</h1>
-                    <div class="img"><img src="assets/images/pdv.png" alt="ПДВ" class="pdv"></div>
+                    <div class="img"><img src="pdv.png" alt="ПДВ" class="pdv"></div>
                     <p align="justify">— процес виявлення, вимірювання, реєстрації, накопичення, узагальнення, зберігання та передавання інформації про діяльність підприємства зовнішнім та внутрішнім користувачам для прийняття рішень.</p> 
                     <p>Бухгалтерський облік — це система спостереження, контролю та керівництва за процесами формування фінансових показників підприємства, їх відображення та несення за них відповідальності. (БО-18-1,БО-19-1 рік)</p>
                     <p>Об'єктами бухгалтерського обліку є майно організацій, їх зобов'язання і господарські операції, здійснювані організаціями в процесі їх діяльності.</p>
