--- a/index5.html
+++ b/index5.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
         <header>
             <div class="logo"><img src="logo.png" alt="Логотип" class="logoimg"></div>
-            <div class="title"> Податок на додану вартість</div>
+            <div class="title">Бухоблік</div>
         </header>
         <nav>
             <ul class="list">
