--- a/index2.html
+++ b/index2.html
@@ -56,19 +56,19 @@
                     </div>
                 <script>
                     function fnc(){
-                        let g = parseInt(input_g.value);
-                        let h = g * 0.07;
-                        input_h.value = h;
-                        console.log(h);
+                        let a = parseInt(input_a.value);
+                        let b = a * 0.07;
+                        input_b.value = b;
+                        console.log(b);
                     }
                     bth.addEventListener("click",fnc);
                 </script>
                 <script>
                     function fnc(){
-                        let g = parseInt(input_g.value);
-                        let k = g * 0.93;
-                        input_k.value = k;
-                        console.log(k);
+                        let a = parseInt(input_a.value);
+                        let c = a * 0.93;
+                        input_c.value = c;
+                        console.log(c);
                     }
                     bth.addEventListener("click",fnc);
                 </script>
