--- a/index3.html
+++ b/index3.html
@@ -52,19 +52,19 @@
                     </div>
                 <script>
                     function fnc(){
-                        let g = parseInt(input_g.value);
-                        let h = g * 0;
-                        input_h.value = h;
-                        console.log(h);
+                        let a = parseInt(input_a.value);
+                        let b = a * 0;
+                        input_h.value = b;
+                        console.log(b);
                     }
                     bth.addEventListener("click",fnc);
                 </script>
                 <script>
                     function fnc(){
-                        let g = parseInt(input_g.value);
-                        let k = g;
-                        input_k.value = k;
-                        console.log(k);
+                        let a = parseInt(input_a.value);
+                        let c = a;
+                        input_a.value = a;
+                        console.log(c);
                     }
                     bth.addEventListener("click",fnc);
                 </script>
