--- a/index0.html
+++ b/index0.html
@@ -52,7 +52,7 @@
                     </div>
                 <script>
                     function fnc(){
-                        let a = parseInt(input_g.value);
+                        let a = parseInt(input_a.value);
                         let b = a * 0.2;
                         input_h.value = b;
                         console.log(b);
