--- a/index2.html
+++ b/index2.html
@@ -47,12 +47,12 @@
             <article class="right">
                 <h2>Якщо щось з лівого переліку відповідає вашому запиту, то введіть наступні дані:</h2>
                 <p>Сума, з якої необхідно розрахувати податок</p>
-                <p><input type="text" id = "input_g"></p>
+                <p><input type="text" id = "input_a"></p>
                     <p><button id = "bth">Розрахувати</button></p>
                     <p>Сума податку складає</p> 
-                    <p><input type="text" id = "input_h"></p>
+                    <p><input type="text" id = "input_b"></p>
                     <p>Чиста сума складатиме</p> 
-                    <p><input type="text" id = "input_k"></p>
+                    <p><input type="text" id = "input_c"></p>
                     </div>
                 <script>
                     function fnc(){
